fix header and images overflow

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,8 +1,12 @@
 .Header {
   background-color: var(--color-dark);
   height: 50px;
+  width: 100%;
   display: flex;
   align-items: stretch;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 .TitleText {
