--- a/src/components/Home/Profile.module.scss
+++ b/src/components/Home/Profile.module.scss
@@ -10,6 +10,7 @@
   width: 300px;
   border-radius: 50%;
   border: solid 2px #fff;
+  overflow: hidden;
 }
 
 .TextContainer {
