--- a/src/components/Home/Works.module.scss
+++ b/src/components/Home/Works.module.scss
@@ -23,6 +23,7 @@
 
 .PictureCrop {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 75%);
+  overflow: hidden;
 }
 
 .BoxHeading {
