--- a/src/layout.module.scss
+++ b/src/layout.module.scss
@@ -2,4 +2,5 @@
   position: relative;
   min-height: 100vh;
   padding-bottom: 100px;
+  padding-top: 50px;
 }
